@@ -1,3 +1,5 @@
+2006/3/7 -- released version 20060307_trunk
+
 2006/3/6 -- released version 20060306_trunk
 
 2006/3/5 -- released version 20060305_trunk
